<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imgv_main"
        android:layout_width="210dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364"
        android:contentDescription="@string/main_icon"
        app:srcCompat="@drawable/main_icon" />

    <ImageView
        android:id="@+id/imgv_rss"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgv_main"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        android:contentDescription="@string/left_icon"
        app:srcCompat="@drawable/rss_icon" />

    <ImageView
        android:id="@+id/imgv_info"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgv_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/info_icon"
        android:contentDescription="@string/right_icon" />

    <TextView
        android:id="@+id/tv_description1"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:maxLines="2"
        android:text="@string/description_text1"
        app:layout_constraintBottom_toTopOf="@+id/tv_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgv_main"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/tv_description2"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:maxLines="2"
        android:text="@string/description_text2"
        app:layout_constraintBottom_toTopOf="@+id/tv_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgv_main"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/tv_description3"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:maxLines="2"
        android:text="@string/description_text3"
        app:layout_constraintBottom_toTopOf="@+id/tv_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgv_main"
        app:layout_constraintVertical_bias="0.712" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>